# RedBot

./: .env  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  application.yml  build.gradle  devspace.yaml  gradle.properties  nodemon.json  package-lock.json  package.json  settings.gradle  tsconfig.json
.github/workflows/: build.yml  deploy.yml  docker-image.yml
deployment/: deployment.yml  docker-compose.yml
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml
src/: index.ts  main.rs  types.rs  voice.rs
src/client/: client.ts
src/commands/: mod.rs
src/commands/administrations/: config.ts
src/commands/fun/: cat.ts  chat.rs  feed.ts  fml.ts  fortnite.ts  hug.rs  hug.ts  kiss.rs  kiss.ts  lewd.rs  lewd.ts  mod.rs  neko.rs  neko.ts  owoify.ts  pat.rs  pat.ts  slap.rs  slap.ts
src/commands/informations/: embed.ts  infos.ts
src/commands/infos/: infos.rs  mod.rs
src/commands/miscs/: giveaway.ts  help.ts  javascript.rs
src/commands/moderation/: mute.ts  unmute.ts  warn.ts
src/commands/music/: join.rs  join.ts  loop.ts  mod.rs  play.rs  play.ts  playlist.ts  queue.rs  skip.rs  skip.ts  stop.rs  stop.ts
src/commands/utils/: base64.rs
src/database/: index.ts
src/database/models/: GuildConfig.ts  GuildGiveaways.ts  GuildMember.ts  GuildModeration.ts  Translations.ts
src/events/: ErrorEvent.ts  ReadyEvent.ts
src/events/channel/: ChannelCreateEvent.ts
src/events/guild/: GuildCreateEvent.ts
src/structures/: CommandHandler.ts  EventHandler.ts
src/utils/: logger.ts  permissionsUtils.ts  registry.ts  translator.ts  types.ts  utils.ts
(+170 files in other folders)
