[package]
name = "redbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
fancy-regex = "0.11.0"
futures = "0.3.28"
gethostname = "0.4.3"
google-youtube3 = "5.0.2"
hyper = "0.14.27"
hyper-rustls = { version = "0.24.1", features = ["http2"] }
itertools = "0.11.0"
js-sandbox = "0.2.0-rc.1"
lazy_static = "1.4.0"
poise = "0.5.5"
regex = "1.9.3"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
rspotify = { version = "0.11.7", default-features = false, features = ["client-reqwest", "reqwest-rustls-tls"] }
serde_json = "1.0.104"
songbird = { version = "0.3.2", features = ["builtin-queue", "yt-dlp"] }
sysinfo = "0.29.7"
tokio = { version = "1.21.2", features = ["full"] }
